-minor design changes

--- a/Mic/Views/Home/Index.cshtml
+++ b/Mic/Views/Home/Index.cshtml
@@ -1,47 +1,9 @@
 ﻿
 @model IEnumerable<Mic.Models.Cat>
-<style>
-    .container-pic {
-        position: relative;
-        margin: 0px;
-        padding: 0px;
-    }
 
-    .overlay-pic {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0;
-        transition: .5s ease;
-        background-color: #008CBA;
-    }
-
-    .container-pic:hover .overlay-pic {
-        opacity: 0.8;
-    }
-
-    .text-fade-away {
-        color: white;
-        font-size: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
-</style>
-@section Styles {
-    <link href="@Url.Content("~/css/site.css")" rel="stylesheet" type="text/css" />
-}
 
 <div class="text-center">
-    <h1 class="display-4">Dobrodošli! </h1>
+    <h1 class="display-4">Mice na lageru: </h1>
 </div>
 
 <div class="card-deck" id="Cats">
@@ -49,7 +11,7 @@
     @foreach (var cat in Model)
     {
         <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="card border-warning" style="width: 18rem; margin-bottom:25px">
+            <div class="card border-warning" style="width: 18rem; margin-bottom:25px;">
                 <div class="card-header"><h3><b>@Html.DisplayFor(modelItem => cat.Name)</b></h3></div>
                 <div class="container-pic">
                     <img class="card-img-bottom" width="250" height="200" style="margin:0px;" src="@Html.DisplayFor(modelItem => cat.ImageUrl)" />
@@ -59,7 +21,7 @@
                 </div>
                 <div class="card-footer">
 
-                    <div class="row">
+                    <div class="row justify-content-center">
                         @*like
                             <div class="col-sm">
                                 <a class="btn btn-outline-danger btn-lg">
@@ -74,7 +36,7 @@
                             </div>*@
                         @*shoppingcart*@
                         <div class="col-sm-auto align-middle">
-                            <a class="btn btn-success btn-sm" style="width:250px;height:45px;padding:0" id="cartButton"
+                            <a class="btn btn-success btn-sm" style="background-color:limegreen;width:220px;height:45px;padding:0;align-content:center;flex:auto;" id="cartButton"
                                asp-controller="ShoppingCart"
                                asp-action="AddToShoppingCart"
                                asp-route-catId="@cat.CatId">
