--- a/Mic/Views/Shared/_Layout.cshtml
+++ b/Mic/Views/Shared/_Layout.cshtml
@@ -10,24 +10,11 @@
     <link href="@Url.Content("~/css/site.css")" rel="stylesheet" type="text/css" />
     @RenderSection("Styles", false)
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    @*<link rel="stylesheet" href="~/css/site.css" />*@
     <link href="~/lib/font-awesome/css/all.css" rel="stylesheet" />
-    <style>
-        .active-purple-2 input[type=text]:focus:not([readonly]) {
-            border-bottom: 1px solid #ce93d8;
-            box-shadow: 0 1px 0 0 #ce93d8;
-        }
-
-        .active-purple input[type=text] {
-            border-bottom: 1px solid #ce93d8;
-            box-shadow: 0 1px 0 0 #ce93d8;
-        }
-    </style>
-
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 fixed-top" style=" background-color: #A199D4;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3 fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,18 +25,27 @@
                     <li class="nav-item">
                         <a class="navbar-brand" asp-controller="Home" asp-action="Index"><b>Mic</b></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Cats" asp-action="Index">Dodaj novu mačku</a>
-                    </li>
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Cats" asp-action="Index">Vidi sve mačke</a>
+                        </li>
+                     }
+                    else
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Cats" asp-action="Create">Dodaj novu mačku</a>
+                        </li>
+                    }
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-controller="Categories" asp-action="Index">Stvori svoju vrstu</a>
                     </li>
-                    <li>
+                    <li class="nav-item">
                         @using (Html.BeginForm("Index", "Home", FormMethod.Get))
                         {
-                            <form class="form-inline d-flex justify-content-center md-form form-sm active-purple-2 mt-2">
-                                <i class="fas fa-search active" aria-hidden="true"></i>
-                                @Html.TextBox("id",null,new { style = "color:#ce93d8;border: 1px solid #ce93d8;" }) @*<input class="form-control form-control-sm ml-3 w-75" id="search" type="submit" placeholder="Traži" aria-label="Search">*@
+                            <form class="form-inline justify-content-center ">
+                                <i class="fas fa-paw active" aria-hidden="true"></i>
+                                @Html.TextBox("id", null, new { style = "color:#ce93d8;border: 1px solid #ce93d8; height:35px; width:250px;" })
 
                             </form>
                         }
@@ -90,18 +86,12 @@
                 var search = $("#search").val().toLowerCase();
 
                 $.get('@Url.Action("Index", "Home")' + '?id=' + search.val(), unction(data) {
-                  
+
                 });
             });
 
           });
-
-
-
     </script>
-
-
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
 
