--- a/Mic/Views/Categories/Index.cshtml
+++ b/Mic/Views/Categories/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<Mic.Models.Category>
+@using Microsoft.AspNetCore.Identity
+@inject Microsoft.AspNetCore.Identity.SignInManager<IdentityUser> signInManager
 
 @{
     ViewData["Title"] = "Index";
@@ -8,7 +10,7 @@
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Kreiraj novu vrstu!</a>
-  
+
 </p>
 <table class="table">
     <thead>
@@ -23,20 +25,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoryId">Uredi</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoryId">Detalji</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoryId">Izbriši</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CategoryName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    {
+                    <a asp-action="Edit" asp-route-id="@item.CategoryId">Uredi   |</a>
+
+                        <a asp-action="Delete" asp-route-id="@item.CategoryId">Izbriši</a>
+                    }
+                    |
+                    <a asp-action="Details" asp-route-id="@item.CategoryId">Detalji</a> 
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
