--- a/Mic/Views/Cats/Create.cshtml
+++ b/Mic/Views/Cats/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Stavi novu macu na usvajanje!</h1>
+<h1>Stavi novu macu na usvajanje ili prodaju!</h1>
 
-<h4>Mjau</h4>
+<h4>Upiši podatke:</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -54,16 +54,6 @@
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-            <label asp-for="ImageThumbnailUrl" class="control-label"></label>
-            <input asp-for="ImageThumbnailUrl" class="form-control" />
-            <span asp-validation-for="ImageThumbnailUrl" class="text-danger"></span>
-        </div>*@
-            @*<div class="form-group form-check">
-            <label class="form-check-label">
-                <input class="form-check-input" asp-for="IsPreferredCat" /> @Html.DisplayNameFor(model => model.IsPreferredCat)
-            </label>
-        </div>*@
             <div class="form-group">
                 <label asp-for="InStock" class="control-label"></label>
                 <input asp-for="InStock" class="form-control" />
