--- a/Mic/wwwroot/css/site.css
+++ b/Mic/wwwroot/css/site.css
@@ -2,10 +2,22 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-  font-style:italic;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+    font-style: italic;
+}
+
+.navbar {
+    background-color: #A199D4;
+}
+
+.search {
+    vertical-align:middle;
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    flex:auto;
 }
 
 /* Provide sufficient contrast against white background */
@@ -63,14 +75,52 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  margin-bottom: 30px;
+  background-color:plum;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 30px; /* Vertically center the text there */
+    background-color: #A199D4;
+}
+
+
+.container-pic {
+    position: relative;
+    margin: 0px;
+    padding: 0px;
+}
+
+.overlay-pic {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #A199D4;
+}
+
+.container-pic:hover .overlay-pic {
+    opacity: 0.8;
+}
+
+.text-fade-away {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 
