--- a/Mic/Views/Account/Register.cshtml
+++ b/Mic/Views/Account/Register.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewData["Title"] = "Register";
 }
+    <head>
+        <link href="@Url.Content("~/css/Log.css")" rel="stylesheet" type="text/css" />
+
+    </head>
 
 <h1>Registracija</h1>
 
