--- a/Mic/Views/Categories/Edit.cshtml
+++ b/Mic/Views/Categories/Edit.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
+<head>
+    <link href="@Url.Content("~/css/Log.css")" rel="stylesheet" type="text/css" />
+
+</head>
+
 <h1>Uredi</h1>
 
 <h4>Vrsta</h4>
