--- a/Mic/Views/Order/CheckoutComplete.cshtml
+++ b/Mic/Views/Order/CheckoutComplete.cshtml
@@ -1,3 +1,9 @@
-﻿<h1>@ViewBag.CheckoutCompleteMessage</h1>
+﻿<head>
+    <link href="@Url.Content("~/css/Log.css")" rel="stylesheet" type="text/css" />
+
+</head>
+
+
+<h1>@ViewBag.CheckoutCompleteMessage</h1>
 <h2>Čestitamo usvojili ste micu! </h2>
 <h2>Maca će biti poslana na vašu kućnu adresu!</h2>
