--- a/Mic/Views/Categories/Create.cshtml
+++ b/Mic/Views/Categories/Create.cshtml
@@ -4,9 +4,14 @@
     ViewData["Title"] = "Create";
 }
 
+<head>
+    <link href="@Url.Content("~/css/Log.css")" rel="stylesheet" type="text/css" />
+
+</head>
+
 <h1>Kreirajte svoju vrstu mačke ako nije već ponuđena</h1>
 
-<h4>Category</h4>
+<h4>Unesite podatke:</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
